k8s/apps/keel/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`keel.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`keel.starry.blue`)
      services:
        - name: keel
          port: 9300
      middlewares:
        - name: headers-keel

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-keel

spec:
  headers:
    customRequestHeaders:
      # intended; not insecure
      Authorization: Basic dXNlcjpwYXNz
